--- a/Ranwildimal/app/src/main/res/values-vi-rVN/strings.xml
+++ b/Ranwildimal/app/src/main/res/values-vi-rVN/strings.xml
@@ -42,7 +42,7 @@
     <string name="animal_name">Tên của con vật</string>
     <string name="report_1">Con vật này là</string>
     <string name="report_2">Bạn nghĩ con vật này là con gì?</string>
-    <string name="report_3">Hãy cho chúng tôi biết thêm về con vật này</string>
+    <string name="report_3">Một số thông tin khác</string>
     <string name="lecturer">Giảng viên hướng dẫn</string>
     <string name="report_msg">Kết nối mạng để sử dụng chức năng này</string>
     <string name="unidentify">Không thể xác định</string>
